--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
-    "prepare": "npm run build",
-    "inspector": "npx @modelcontextprotocol/inspector dist/index.js"
+    "start": "node dist/index.js"
   },
   "keywords": [
     "mcp",
@@ -23,17 +22,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.0.4",
-    "@types/express": "^4.17.25",
     "airtable": "^0.12.2",
-    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.2",
     "mcp-use": "^1.3.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.19",
     "@types/node": "^22.10.2",
     "typescript": "^5.7.2"
   }
